bpo-36589: Fix the error handling in curses.update_lines_cols()